tests/suite/errors/e02_undefined_function.rs
// err: undefined function `foo`

fn main() {
    foo(1, 2);
}
